[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/Buttons/CharacterDeadAs.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Buttons/BackToMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Buttons/PlayAgain.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/gameplay_theme.tres" type="Theme" id=4]
[ext_resource path="res://UI/Menus/Gameover.gd" type="Script" id=5]

[node name="Gameover" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 1024.0
margin_bottom = 50.0
theme = ExtResource( 4 )
text = "You made it to the ripe old age of:"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 1024.0
margin_bottom = 90.0
theme = ExtResource( 4 )
text = "Lorem Ipsum"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 100.0
margin_right = 1024.0
margin_bottom = 500.0
alignment = 1

[node name="BackToMenu" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 155.0
margin_right = 323.0
margin_bottom = 400.0

[node name="CharacterDeadAs" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 327.0
margin_right = 727.0
margin_bottom = 400.0
rect_min_size = Vector2( 400, 400 )

[node name="PlayAgain" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 731.0
margin_right = 869.0
margin_bottom = 400.0

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 510.0
margin_right = 1024.0
margin_bottom = 540.0
theme = ExtResource( 4 )
text = "Your best age:"
align = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 580.0
theme = ExtResource( 4 )
text = "Press space to beat it"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]

[editable path="VBoxContainer/HBoxContainer/CharacterDeadAs"]
